# aisoul

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-contract-test.yml  ci.yml
backend/: .env.example
backend/app/: admin_auth.py  anomaly_service.py  article_ingest.py  data_api_service.py  db.py  hot_service.py  lifespan.py  llm_service.py  main.py  models.py  product_models.py  product_seed.py  schemas.py  scope_labels_util.py  security.py  services.py  source_segment_resolve.py  taxonomy_from_sources.py
backend/scripts/: export_admin_source_presets_fallback.py  test_admin_source_presets.py
backend/static/: app.js  style.css
backend/templates/: admin.html  admin_compliance.html  admin_review.html  admin_sources.html  admin_taxonomy.html  base.html  categories.html  evidence.html  home.html  inspirations.html  trends.html  (+7 more)
db/: schema-v1.sql
docs/: agent-trend-platform-prd-tech-spec-v2.md  agent-trend-platform-prd-tech-spec.md  deploy-tencent-cvm.md  functional-spec-admin-public-v1.md  implementation-architecture-api-db-security-v1.md  infrastructure-plan.md  internal-security-runbook.md  page-api-mapping.md  requirements-from-24-agents.md  requirements-master-v1.md  review-log-p0-closure.md  task-list-from-spec-v2.md  tos-matrix-v1.csv
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
monitoring/: data_quality_gate.py
openapi/: admin-internal-v1.yaml  public-v1.yaml
scripts/: contract_test.py  train_learning_model.py
tests/: conftest.py
(+55 files in other folders)
