[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project]
name = "aisoul-agent-trend-platform"
version = "0.1.0"
description = "Agent trend insight platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.0",
  "pydantic>=2.7.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "PyJWT>=2.9.0",
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "apscheduler>=3.10.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
